--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://hemuchoudhary231:your-password@cluster0.eqirysu.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET = chai-and-code
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = chai-and-backend
+REFRESH_TOKEN_EXPIRY = 10d
