Access And Refresh Token and Written Login controller and Logout controller

--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,10 @@ ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = chai-and-backend
 REFRESH_TOKEN_EXPIRY = 10d
 
-CLOUDINARY_CLOUD_NAME = dt7nr2rde
-CLOUDINARY_API_KEY = 971942113657726
-CLOUDINARY_API_SECRET = eu6GTaGjbenRWRPkVdGVz-7KwAs
+# CLOUDINARY_CLOUD_NAME = dt7nr2rde
+# CLOUDINARY_API_KEY = 971942113657726
+# CLOUDINARY_API_SECRET = eu6GTaGjbenRWRPkVdGVz-7KwAs
+
+CLOUDINARY_CLOUD_NAME = 
+CLOUDINARY_API_KEY = 
+CLOUDINARY_API_SECRET = 
